to check bug on MCbook

--- a/index.html
+++ b/index.html
@@ -13,22 +13,27 @@
 <body>
   <div class="root">
     <div class="page">
+<!--* header -->
       <header class="header">
-        <img class="logo header__logo" src="#" alt="Логотип">
+        <img class="logo header__logo" src="./images/logo-header.svg" alt="Логотип">
       </header>
-
       <main class="main">
+<!--* profile -->
 
         <section class="profile">
-          <img class="profile__avatar" src="#" alt="Фото профиля">
-          <div class="profile__info">
-            <h1 class="profile__name"></h1>
-            <button class="profile__edit-button"></button>
-            <p class="profile__occupation"></p>
-          </div>
-          <button class="profile__add-button"></button>
+            <img class="profile__avatar" src="./images/avatar.jpg" alt="Фото профиля">
+            <div class="profile__text-info">
+              <h1 class="profile__name">Жак-Ив Кусто</h1>
+              <button class="profile__edit-button">
+              </button>
+              <p class="profile__occupation">Исследователь океана</p>
+            </div>
+          <button class="profile__add-button">
+          </button>
         </section>
 
+<!--* elements -->
+<!--
         <ul class="elements">
           <li class="element">
             <img class="element__image" src="#" alt="">
@@ -61,14 +66,15 @@
             <div class="element__like"></div>
           </li>
         </ul>
-
       </main>
-
+-->
+<!--* footer -->
       <footer class="footer">
-        <p class="footer__copyright"></p>
+        <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
       </footer>
     </div>
-    
+<!--* pop-up -->
+<!--
     <div class="pop-up">
       <form class="pop-up__form" action="">
         <h2 class="pop-up__title"></h2>
@@ -78,6 +84,7 @@
         <button class="pop-up__exit-button"></button>
       </form>
     </div>
+-->
   </div>
 </body>
 </html>
