--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
       </header>
       <main class="main">
 <!--* profile -->
-
         <section class="profile">
             <img class="profile__avatar" src="./images/avatar.jpg" alt="Фото профиля">
-            <div class="profile__text-info">
+            <div class="profile__info">
               <h1 class="profile__name">Жак-Ив Кусто</h1>
-              <button class="profile__edit-button">
+              <button class="profile__edit-button" name="Изменить профиль" type="button">
+                <img class="profile__icon-edit" src="./images/edit-button.svg" alt="Изменить профиль">
               </button>
               <p class="profile__occupation">Исследователь океана</p>
             </div>
-          <button class="profile__add-button">
+          <button class="profile__add-button" name="Добавить" type="button">
+            <img class="profile__icon-add" src="./images/add-button.svg" alt="Добавить">
           </button>
         </section>
-
 <!--* elements -->
 <!--
         <ul class="elements">
