--- a/index.html
+++ b/index.html
@@ -33,41 +33,45 @@
           </button>
         </section>
 <!--* elements -->
-<!--
         <ul class="elements">
           <li class="element">
-            <img class="element__image" src="#" alt="">
-            <h2 class="element__title"></h2>
+            <img class="element__image" src="./images/ahun.jpg" alt="Гора Ахун">
+          <div class="element__info">
+            <h2 class="element__title">Гора Ахун</h2>
+<button class="element__like">
+  
+</button>
+          </div>
+          </li>
+          <li class="element">
+            <img class="element__image" src="./images/ladoga.jpg" alt="Ладога">
+            <div class="element__info">
+              <h2 class="element__title">Ладожское озеро</h2>
+              <div class="element__like"></div>
+            </div>
+          </li>
+          <li class="element">
+            <img class="element__image" src="./images/nikola.jpg" alt="Никола-Ленивец">
+            <h2 class="element__title">Никола-Ленивец</h2>
             <div class="element__like"></div>
           </li>
           <li class="element">
-            <img class="element__image" src="#" alt="">
-            <h2 class="element__title"></h2>
+            <img class="element__image" src="./images/pechory.jpg" alt="Печоры">
+            <h2 class="element__title">Печоры</h2>
             <div class="element__like"></div>
           </li>
           <li class="element">
-            <img class="element__image" src="#" alt="">
-            <h2 class="element__title"></h2>
+            <img class="element__image" src="./images/tobizina.jpg" alt="Тобизина">
+            <h2 class="element__title">Мыс Тобизина</h2>
             <div class="element__like"></div>
           </li>
           <li class="element">
-            <img class="element__image" src="#" alt="">
-            <h2 class="element__title"></h2>
-            <div class="element__like"></div>
-          </li>
-          <li class="element">
-            <img class="element__image" src="#" alt="">
-            <h2 class="element__title"></h2>
-            <div class="element__like"></div>
-          </li>
-          <li class="element">
-            <img class="element__image" src="#" alt="">
-            <h2 class="element__title"></h2>
+            <img class="element__image" src="./images/volga.jpg" alt="Калязин">
+            <h2 class="element__title">Калязин</h2>
             <div class="element__like"></div>
           </li>
         </ul>
       </main>
--->
 <!--* footer -->
       <footer class="footer">
         <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
