--- a/index.html
+++ b/index.html
@@ -10,75 +10,94 @@
   <link rel="stylesheet" href="./pages/index.css">
   <title>Место</title>
 </head>
+
 <body>
   <div class="root">
     <div class="page">
-<!--* header -->
+      <!--* header -->
       <header class="header">
         <img class="logo header__logo" src="./images/logo-header.svg" alt="Логотип">
       </header>
       <main class="main">
-<!--* profile -->
+        <!--* profile -->
         <section class="profile">
-            <img class="profile__avatar" src="./images/avatar.jpg" alt="Фото профиля">
-            <div class="profile__info">
-              <h1 class="profile__name">Жак-Ив Кусто</h1>
-              <button class="profile__edit-button" name="Изменить профиль" type="button">
-                <img class="profile__icon-edit" src="./images/edit-button.svg" alt="Изменить профиль">
-              </button>
-              <p class="profile__occupation">Исследователь океана</p>
-            </div>
+          <img class="profile__avatar" src="./images/avatar.jpg" alt="Фото профиля">
+          <div class="profile__info">
+            <h1 class="profile__name">Жак-Ив Кусто</h1>
+            <button class="profile__edit-button" name="Изменить профиль" type="button">
+              <img class="profile__icon-edit" src="./images/edit-button.svg" alt="Изменить профиль">
+            </button>
+            <p class="profile__occupation">Исследователь океана</p>
+          </div>
           <button class="profile__add-button" name="Добавить" type="button">
             <img class="profile__icon-add" src="./images/add-button.svg" alt="Добавить">
           </button>
         </section>
-<!--* elements -->
+        <!--* elements -->
         <ul class="elements">
           <li class="element">
             <img class="element__image" src="./images/ahun.jpg" alt="Гора Ахун">
-          <div class="element__info">
-            <h2 class="element__title">Гора Ахун</h2>
-<button class="element__like">
-  
-</button>
-          </div>
+            <div class="element__info">
+              <h2 class="element__title">Гора Ахун</h2>
+              <button class="element__button">
+                <div class="element__like"></div>
+              </button>
+            </div>
           </li>
           <li class="element">
             <img class="element__image" src="./images/ladoga.jpg" alt="Ладога">
             <div class="element__info">
               <h2 class="element__title">Ладожское озеро</h2>
-              <div class="element__like"></div>
+              <button class="element__button">
+                <div class="element__like"></div>
+              </button>
             </div>
           </li>
           <li class="element">
             <img class="element__image" src="./images/nikola.jpg" alt="Никола-Ленивец">
-            <h2 class="element__title">Никола-Ленивец</h2>
-            <div class="element__like"></div>
+            <div class="element__info">
+              <h2 class="element__title">Никола-Ленивец</h2>
+              <button class="element__button">
+                <div class="element__like"></div>
+              </button>
+            </div>
           </li>
           <li class="element">
             <img class="element__image" src="./images/pechory.jpg" alt="Печоры">
-            <h2 class="element__title">Печоры</h2>
-            <div class="element__like"></div>
+            <div class="element__info">
+              <h2 class="element__title">Печоры</h2>
+              <button class="element__button">
+                <div class="element__like"></div>
+              </button>
+            </div>
           </li>
           <li class="element">
             <img class="element__image" src="./images/tobizina.jpg" alt="Тобизина">
-            <h2 class="element__title">Мыс Тобизина</h2>
-            <div class="element__like"></div>
+            <div class="element__info">
+              <h2 class="element__title">Мыс Тобизина</h2>
+              <button class="element__button">
+                <div class="element__like"></div>
+              </button>
+            </div>
           </li>
           <li class="element">
             <img class="element__image" src="./images/volga.jpg" alt="Калязин">
-            <h2 class="element__title">Калязин</h2>
-            <div class="element__like"></div>
+            <div class="element__info">
+              <h2 class="element__title">Калязин</h2>
+              <button class="element__button">
+                <div class="element__like"></div>
+              </button>
+            </div>
           </li>
         </ul>
       </main>
-<!--* footer -->
+      <!--* footer -->
       <footer class="footer">
         <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
       </footer>
     </div>
-<!--* pop-up -->
-<!--
+    <!--* pop-up -->
+    <!--
     <div class="pop-up">
       <form class="pop-up__form" action="">
         <h2 class="pop-up__title"></h2>
@@ -91,4 +110,5 @@
 -->
   </div>
 </body>
+
 </html>
