--- a/index.html
+++ b/index.html
@@ -97,18 +97,20 @@
       </footer>
     </div>
     <!--* pop-up -->
-    <!--
-    <div class="pop-up">
-      <form class="pop-up__form" action="">
-        <h2 class="pop-up__title"></h2>
-        <input class="pop-up__name" type="text">
-        <input class="pop-up__occupation" type="text">
-        <button class="pop-up__save-button"></button>
-        <button class="pop-up__exit-button"></button>
+    <section class="popup">
+      <form class="popup__container" action="">
+        <h2 class="popup__title">Редактировать профиль</h2>
+        <input class="popup__name" type="text">
+        <input class="popup__occupation" type="text">
+        <button class="popup__save-button" type="button" aria-label="Сохранить">
+          <span class="popup__button-text">Сохранить</span>
+        </button>
+        <button class="popup__exit-button">
+          <div class="popup__exit"></div>
+        </button>
       </form>
-    </div>
--->
+    </section>
   </div>
+  <script src="./scripts/index.js"></script>
 </body>
-
 </html>
