--- a/index.html
+++ b/index.html
@@ -14,32 +14,32 @@
 <body>
   <div class="root">
     <div class="page">
-      <!--* header -->
+<!--* header -->
       <header class="header">
         <img class="logo header__logo" src="./images/logo-header.svg" alt="Логотип">
       </header>
       <main class="main">
-        <!--* profile -->
+<!--* profile -->
         <section class="profile">
           <img class="profile__avatar" src="./images/avatar.jpg" alt="Фото профиля">
           <div class="profile__info">
             <h1 class="profile__name">Билл Мюррей</h1>
-            <button class="profile__edit-button" name="Изменить профиль" type="button">
+            <button class="profile__edit-button" aria-label="Изменить профиль" name="edit" type="button">
               <img class="profile__icon-edit" src="./images/edit-button.svg" alt="Изменить профиль">
             </button>
             <p class="profile__occupation">Актёр</p>
           </div>
-          <button class="profile__add-button" name="Добавить" type="button">
+          <button class="profile__add-button" aria-label="Добавить" name="add" type="button">
             <img class="profile__icon-add" src="./images/add-button.svg" alt="Добавить">
           </button>
         </section>
-        <!--* elements -->
+<!--* elements -->
         <ul class="elements">
           <li class="element">
             <img class="element__image" src="./images/ahun.jpg" alt="Гора Ахун">
             <div class="element__info">
               <h2 class="element__title">Гора Ахун</h2>
-              <button class="element__button">
+              <button class="element__button" aria-label="Понравилось" name="like">
                 <div class="element__like"></div>
               </button>
             </div>
@@ -48,7 +48,7 @@
             <img class="element__image" src="./images/ladoga.jpg" alt="Ладога">
             <div class="element__info">
               <h2 class="element__title">Ладожское озеро</h2>
-              <button class="element__button">
+              <button class="element__button" aria-label="Понравилось" name="like">
                 <div class="element__like"></div>
               </button>
             </div>
@@ -57,7 +57,7 @@
             <img class="element__image" src="./images/nikola.jpg" alt="Никола-Ленивец">
             <div class="element__info">
               <h2 class="element__title">Никола-Ленивец</h2>
-              <button class="element__button">
+              <button class="element__button" aria-label="Понравилось" name="like">
                 <div class="element__like"></div>
               </button>
             </div>
@@ -66,7 +66,7 @@
             <img class="element__image" src="./images/pechory.jpg" alt="Печоры">
             <div class="element__info">
               <h2 class="element__title">Печоры</h2>
-              <button class="element__button">
+              <button class="element__button" aria-label="Понравилось" name="like">
                 <div class="element__like"></div>
               </button>
             </div>
@@ -75,7 +75,7 @@
             <img class="element__image" src="./images/tobizina.jpg" alt="Тобизина">
             <div class="element__info">
               <h2 class="element__title">Мыс Тобизина</h2>
-              <button class="element__button">
+              <button class="element__button" aria-label="Понравилось" name="like">
                 <div class="element__like"></div>
               </button>
             </div>
@@ -84,28 +84,28 @@
             <img class="element__image" src="./images/volga.jpg" alt="Калязин">
             <div class="element__info">
               <h2 class="element__title">Калязин</h2>
-              <button class="element__button">
+              <button class="element__button" aria-label="Понравилось" name="like">
                 <div class="element__like"></div>
               </button>
             </div>
           </li>
         </ul>
       </main>
-      <!--* footer -->
+<!--* footer -->
       <footer class="footer">
         <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
       </footer>
     </div>
-    <!--* pop-up -->
+<!--* pop-up -->
     <section class="popup">
       <form class="popup__container" action="">
         <h2 class="popup__title">Редактировать профиль</h2>
         <input class="popup__name" type="text">
-        <input class="popup__occupation" type="text">
-        <button class="popup__save-button" type="button" aria-label="Сохранить">
+        <input class="popup__occupation" type="text" value="something">
+        <button class="popup__save-button" type="submit" aria-label="Сохранить" name="save">
           <span class="popup__button-text">Сохранить</span>
         </button>
-        <button class="popup__exit-button">
+        <button class="popup__exit-button" type="button" aria-label="Закрыть" name="exit">
           <div class="popup__exit"></div>
         </button>
       </form>
