--- a/index.html
+++ b/index.html
@@ -14,35 +14,36 @@
 <body>
   <div class="root">
     <div class="page">
-<!--* header -->
-      <header class="header">
+      <!--* header -->
+      <header class="header section">
         <img class="logo header__logo" src="./images/logo-header.svg" alt="Логотип">
       </header>
       <main class="main">
-<!--* profile -->
-        <section class="profile">
+        <!--* profile -->
+        <section class="profile section">
           <img class="profile__avatar" src="./images/avatar.jpg" alt="Фото профиля">
           <div class="profile__info">
             <h1 class="profile__name">Билл Мюррей</h1>
-<!-- Кнопка позиционируется абсолютно т.к. для мобильной версии текст центрирован по центру
-У кнопок есть паддинги для того, чтобы было удобно попасть пальцем/мышкой -->
-            <button class="profile__edit-button" aria-label="Изменить профиль" name="edit" type="button">
+            <!-- Кнопка позиционируется абсолютно т.к. для мобильной версии текст центрирован
+У кнопок (edit, like, exit) есть паддинги для того, чтобы было удобно попасть пальцем/мышкой
+тега <nav> нет, т.к. нет ссылок-->
+            <button class="button profile__edit-button" aria-label="Изменить профиль" name="edit" type="button">
               <div class="profile__icon-edit"></div>
             </button>
             <p class="profile__occupation">Актёр</p>
           </div>
-          <button class="profile__add-button" aria-label="Добавить" name="add" type="button">
+          <button class="button profile__add-button" aria-label="Добавить" name="add" type="button">
             <div class="profile__icon-add"></div>
           </button>
         </section>
-<!--* elements -->
-        <ul class="elements">
+        <!--* elements -->
+        <ul class="elements section">
           <li class="element">
             <img class="element__image" src="./images/ahun.jpg" alt="Гора Ахун">
             <div class="element__info">
               <h2 class="element__title">Гора Ахун</h2>
-              <button class="element__button" aria-label="Понравилось" name="like">
-                <div class="element__like"></div>
+              <button class="button element__like-button" aria-label="Понравилось" name="like">
+                <div class="element__icon-like"></div>
               </button>
             </div>
           </li>
@@ -50,8 +51,8 @@
             <img class="element__image" src="./images/ladoga.jpg" alt="Ладога">
             <div class="element__info">
               <h2 class="element__title">Ладожское озеро</h2>
-              <button class="element__button" aria-label="Понравилось" name="like">
-                <div class="element__like"></div>
+              <button class="button element__like-button" aria-label="Понравилось" name="like">
+                <div class="element__icon-like"></div>
               </button>
             </div>
           </li>
@@ -59,8 +60,8 @@
             <img class="element__image" src="./images/nikola.jpg" alt="Никола-Ленивец">
             <div class="element__info">
               <h2 class="element__title">Никола-Ленивец</h2>
-              <button class="element__button" aria-label="Понравилось" name="like">
-                <div class="element__like"></div>
+              <button class="button element__like-button" aria-label="Понравилось" name="like">
+                <div class="element__icon-like"></div>
               </button>
             </div>
           </li>
@@ -68,8 +69,8 @@
             <img class="element__image" src="./images/pechory.jpg" alt="Печоры">
             <div class="element__info">
               <h2 class="element__title">Печоры</h2>
-              <button class="element__button" aria-label="Понравилось" name="like">
-                <div class="element__like"></div>
+              <button class="button element__like-button" aria-label="Понравилось" name="like">
+                <div class="element__icon-like"></div>
               </button>
             </div>
           </li>
@@ -77,8 +78,8 @@
             <img class="element__image" src="./images/tobizina.jpg" alt="Тобизина">
             <div class="element__info">
               <h2 class="element__title">Мыс Тобизина</h2>
-              <button class="element__button" aria-label="Понравилось" name="like">
-                <div class="element__like"></div>
+              <button class="button element__like-button" aria-label="Понравилось" name="like">
+                <div class="element__icon-like"></div>
               </button>
             </div>
           </li>
@@ -86,33 +87,34 @@
             <img class="element__image" src="./images/volga.jpg" alt="Калязин">
             <div class="element__info">
               <h2 class="element__title">Калязин</h2>
-              <button class="element__button" aria-label="Понравилось" name="like">
-                <div class="element__like"></div>
+              <button class="button element__like-button" aria-label="Понравилось" name="like">
+                <div class="element__icon-like"></div>
               </button>
             </div>
           </li>
         </ul>
       </main>
-<!--* footer -->
-      <footer class="footer">
+      <!--* footer -->
+      <footer class="footer section">
         <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
       </footer>
     </div>
-<!--* pop-up -->
+    <!--* pop-up -->
     <section class="popup">
       <form class="popup__container" action="">
         <h2 class="popup__title">Редактировать профиль</h2>
         <input class="popup__name" type="text">
         <input class="popup__occupation" type="text">
-        <button class="popup__save-button" type="submit" aria-label="Сохранить" name="save">
+        <button class="button popup__save-button" type="submit" aria-label="Сохранить" name="save">
           <span class="popup__button-text">Сохранить</span>
         </button>
-        <button class="popup__exit-button" type="button" aria-label="Закрыть" name="exit">
-          <div class="popup__exit"></div>
+        <button class="button popup__exit-button" type="button" aria-label="Закрыть" name="exit">
+          <div class="popup__icon-exit"></div>
         </button>
       </form>
     </section>
   </div>
   <script src="./scripts/index.js"></script>
 </body>
+
 </html>
