--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
   <link rel="stylesheet" href="./pages/index.css">
   <title>Место</title>
 </head>
+<!-- 
+1. кнопка EDIT позиционируется абсолютно т.к. для мобильной версии текст центрирован
+2. у кнопок (edit, like, exit) есть паддинги для того, чтобы было удобно попасть пальцем/мышкой
+3. тега <nav> нет, т.к. нет ссылок
+4. иконки в кнопках <span>, т.к. валидатор не пропускает <div>, а как правильно делать с <svg> пока не понял
+todo Узнать как вставлять svg чтобы потом можно было менять like на like_active
+-->
 
 <body>
   <div class="root">
@@ -24,16 +31,13 @@
           <img class="profile__avatar" src="./images/avatar.jpg" alt="Фото профиля">
           <div class="profile__info">
             <h1 class="profile__name">Билл Мюррей</h1>
-            <!-- Кнопка позиционируется абсолютно т.к. для мобильной версии текст центрирован
-У кнопок (edit, like, exit) есть паддинги для того, чтобы было удобно попасть пальцем/мышкой
-тега <nav> нет, т.к. нет ссылок-->
             <button class="button profile__edit-button" aria-label="Изменить профиль" name="edit" type="button">
-              <div class="profile__icon-edit"></div>
+              <span class="profile__icon-edit"></span>
             </button>
             <p class="profile__occupation">Актёр</p>
           </div>
           <button class="button profile__add-button" aria-label="Добавить" name="add" type="button">
-            <div class="profile__icon-add"></div>
+            <span class="profile__icon-add"></span>
           </button>
         </section>
         <!--* elements -->
@@ -43,7 +47,7 @@
             <div class="element__info">
               <h2 class="element__title">Гора Ахун</h2>
               <button class="button element__like-button" aria-label="Понравилось" name="like">
-                <div class="element__icon-like"></div>
+                <span class="element__icon-like"></span>
               </button>
             </div>
           </li>
@@ -52,7 +56,7 @@
             <div class="element__info">
               <h2 class="element__title">Ладожское озеро</h2>
               <button class="button element__like-button" aria-label="Понравилось" name="like">
-                <div class="element__icon-like"></div>
+                <span class="element__icon-like"></span>
               </button>
             </div>
           </li>
@@ -61,7 +65,7 @@
             <div class="element__info">
               <h2 class="element__title">Никола-Ленивец</h2>
               <button class="button element__like-button" aria-label="Понравилось" name="like">
-                <div class="element__icon-like"></div>
+                <span class="element__icon-like"></span>
               </button>
             </div>
           </li>
@@ -70,7 +74,7 @@
             <div class="element__info">
               <h2 class="element__title">Печоры</h2>
               <button class="button element__like-button" aria-label="Понравилось" name="like">
-                <div class="element__icon-like"></div>
+                <span class="element__icon-like"></span>
               </button>
             </div>
           </li>
@@ -79,7 +83,7 @@
             <div class="element__info">
               <h2 class="element__title">Мыс Тобизина</h2>
               <button class="button element__like-button" aria-label="Понравилось" name="like">
-                <div class="element__icon-like"></div>
+                <span class="element__icon-like"></span>
               </button>
             </div>
           </li>
@@ -88,7 +92,7 @@
             <div class="element__info">
               <h2 class="element__title">Калязин</h2>
               <button class="button element__like-button" aria-label="Понравилось" name="like">
-                <div class="element__icon-like"></div>
+                <span class="element__icon-like"></span>
               </button>
             </div>
           </li>
@@ -101,7 +105,7 @@
     </div>
     <!--* pop-up -->
     <section class="popup">
-      <form class="popup__container" action="">
+      <form class="popup__container" action='#'>
         <h2 class="popup__title">Редактировать профиль</h2>
         <input class="popup__name" type="text">
         <input class="popup__occupation" type="text">
@@ -109,7 +113,7 @@
           <span class="popup__button-text">Сохранить</span>
         </button>
         <button class="button popup__exit-button" type="button" aria-label="Закрыть" name="exit">
-          <div class="popup__icon-exit"></div>
+          <span class="popup__icon-exit"></span>
         </button>
       </form>
     </section>
