--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Место">
   <meta name="keywords" content="Россия, Карачаевск, Эльбрус, Домбай">
   <meta name="autor" content="Артём Чумак">
+  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
   <link rel="stylesheet" href="./pages/index.css">
   <title>Место</title>
 </head>
