--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@ todo Узнать как вставлять svg чтобы потом можно
           <img class="profile__avatar" src="./images/avatar.jpg" alt="Фото профиля">
           <div class="profile__info">
             <h1 class="profile__name">Билл Мюррей</h1>
-            <button class="button profile__edit-button" aria-label="Изменить профиль" name="edit" type="button">
+            <button class="button profile__edit-button" aria-label="Изменить профиль" type="button">
               <span class="profile__icon-edit"></span>
             </button>
             <p class="profile__occupation">Актёр</p>
           </div>
-          <button class="button profile__add-button" aria-label="Добавить" name="add" type="button">
+          <button class="button profile__add-button" aria-label="Добавить" type="button">
             <span class="profile__icon-add"></span>
           </button>
         </section>
@@ -45,7 +45,7 @@ todo Узнать как вставлять svg чтобы потом можно
             <img class="element__image" src="./images/ahun.jpg" alt="Гора Ахун">
             <div class="element__info">
               <h2 class="element__title">Гора Ахун</h2>
-              <button class="button element__like-button" aria-label="Понравилось" name="like">
+              <button class="button element__like-button" aria-label="Понравилось">
                 <span class="element__icon-like"></span>
               </button>
             </div>
@@ -54,7 +54,7 @@ todo Узнать как вставлять svg чтобы потом можно
             <img class="element__image" src="./images/ladoga.jpg" alt="Ладога">
             <div class="element__info">
               <h2 class="element__title">Ладожское озеро</h2>
-              <button class="button element__like-button" aria-label="Понравилось" name="like">
+              <button class="button element__like-button" aria-label="Понравилось">
                 <span class="element__icon-like"></span>
               </button>
             </div>
@@ -63,7 +63,7 @@ todo Узнать как вставлять svg чтобы потом можно
             <img class="element__image" src="./images/nikola.jpg" alt="Никола-Ленивец">
             <div class="element__info">
               <h2 class="element__title">Никола-Ленивец</h2>
-              <button class="button element__like-button" aria-label="Понравилось" name="like">
+              <button class="button element__like-button" aria-label="Понравилось">
                 <span class="element__icon-like"></span>
               </button>
             </div>
@@ -72,7 +72,7 @@ todo Узнать как вставлять svg чтобы потом можно
             <img class="element__image" src="./images/pechory.jpg" alt="Печоры">
             <div class="element__info">
               <h2 class="element__title">Печоры</h2>
-              <button class="button element__like-button" aria-label="Понравилось" name="like">
+              <button class="button element__like-button" aria-label="Понравилось">
                 <span class="element__icon-like"></span>
               </button>
             </div>
@@ -81,7 +81,7 @@ todo Узнать как вставлять svg чтобы потом можно
             <img class="element__image" src="./images/tobizina.jpg" alt="Тобизина">
             <div class="element__info">
               <h2 class="element__title">Мыс Тобизина</h2>
-              <button class="button element__like-button" aria-label="Понравилось" name="like">
+              <button class="button element__like-button" aria-label="Понравилось">
                 <span class="element__icon-like"></span>
               </button>
             </div>
@@ -90,7 +90,7 @@ todo Узнать как вставлять svg чтобы потом можно
             <img class="element__image" src="./images/volga.jpg" alt="Калязин">
             <div class="element__info">
               <h2 class="element__title">Калязин</h2>
-              <button class="button element__like-button" aria-label="Понравилось" name="like">
+              <button class="button element__like-button" aria-label="Понравилось">
                 <span class="element__icon-like"></span>
               </button>
             </div>
@@ -108,10 +108,10 @@ todo Узнать как вставлять svg чтобы потом можно
         <h2 class="popup__title">Редактировать профиль</h2>
         <input class="popup__name" type="text">
         <input class="popup__occupation" type="text">
-        <button class="button popup__save-button" type="submit" aria-label="Сохранить" name="save">
+        <button class="button popup__save-button" type="submit" aria-label="Сохранить">
           <span class="popup__button-text">Сохранить</span>
         </button>
-        <button class="button popup__exit-button" type="button" aria-label="Закрыть" name="exit">
+        <button class="button popup__exit-button" type="button" aria-label="Закрыть">
           <span class="popup__icon-exit"></span>
         </button>
       </form>
