--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
           </button>
         </section>
         <!--* elements -->
-        <section class="section">
-          <ul class="elements">
+        <section class="section elements">
+          <ul class="elements__list">
             <li class="element">
               <img class="element__image" src="./images/ahun.jpg" alt="Гора Ахун">
               <div class="element__info">
                 <h2 class="element__title">Гора Ахун</h2>
-                <button class="button element__like-button" aria-label="Понравилось" name="like">
+                <button class="button element__like-button" aria-label="Понравилось">
                   <span class="element__icon-like"></span>
                 </button>
               </div>
@@ -53,7 +53,7 @@
               <img class="element__image" src="./images/ladoga.jpg" alt="Ладога">
               <div class="element__info">
                 <h2 class="element__title">Ладожское озеро</h2>
-                <button class="button element__like-button" aria-label="Понравилось" name="like">
+                <button class="button element__like-button" aria-label="Понравилось">
                   <span class="element__icon-like"></span>
                 </button>
               </div>
@@ -62,7 +62,7 @@
               <img class="element__image" src="./images/nikola.jpg" alt="Никола-Ленивец">
               <div class="element__info">
                 <h2 class="element__title">Никола-Ленивец</h2>
-                <button class="button element__like-button" aria-label="Понравилось" name="like">
+                <button class="button element__like-button" aria-label="Понравилось">
                   <span class="element__icon-like"></span>
                 </button>
               </div>
@@ -71,7 +71,7 @@
               <img class="element__image" src="./images/pechory.jpg" alt="Печоры">
               <div class="element__info">
                 <h2 class="element__title">Печоры</h2>
-                <button class="button element__like-button" aria-label="Понравилось" name="like">
+                <button class="button element__like-button" aria-label="Понравилось">
                   <span class="element__icon-like"></span>
                 </button>
               </div>
@@ -80,7 +80,7 @@
               <img class="element__image" src="./images/tobizina.jpg" alt="Тобизина">
               <div class="element__info">
                 <h2 class="element__title">Мыс Тобизина</h2>
-                <button class="button element__like-button" aria-label="Понравилось" name="like">
+                <button class="button element__like-button" aria-label="Понравилось">
                   <span class="element__icon-like"></span>
                 </button>
               </div>
@@ -89,7 +89,7 @@
               <img class="element__image" src="./images/volga.jpg" alt="Калязин">
               <div class="element__info">
                 <h2 class="element__title">Калязин</h2>
-                <button class="button element__like-button" aria-label="Понравилось" name="like">
+                <button class="button element__like-button" aria-label="Понравилось">
                   <span class="element__icon-like"></span>
                 </button>
               </div>
