--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
     <section class="popup">
       <form class="popup__container" action='#'>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <input class="popup__name" type="text">
-        <input class="popup__occupation" type="text">
+        <input class="popup__name" type="text" placeholder="Имя">
+        <input class="popup__occupation" type="text" placeholder="Род занятий">
         <button class="button popup__save-button" type="submit" aria-label="Сохранить">
           <span class="popup__button-text">Сохранить</span>
         </button>
