--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
           <span class="popup__icon-exit"></span>
         </button>
         <form class="popup__form" action='#' name="profile-edit-form">
-          <input class="popup__name popup__input" type="text" placeholder="Имя" name="name">
-          <input class="popup__occupation popup__input" type="text" placeholder="Род занятий" name="occupation">
+          <input class="input" type="text" placeholder="Имя" name="name">
+          <input class="input" type="text" placeholder="Род занятий" name="occupation">
           <button class="button popup__save-button" type="submit" aria-label="Сохранить">
             <span class="popup__button-text">Сохранить</span>
           </button>
