--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
         <h2 class="popup__title">Редактировать профиль</h2>
         <button class="button popup__exit-button" type="button" aria-label="Закрыть"></button>
         <form class="popup__form" action='#' name="profile-edit-form">
-          <input class="input" type="text" placeholder="Имя" name="name">
-          <input class="input" type="text" placeholder="Род занятий" name="occupation">
+          <input class="popup__input" type="text" placeholder="Имя" name="name">
+          <input class="popup__input" type="text" placeholder="Род занятий" name="occupation">
           <button class="button popup__save-button" type="submit" aria-label="Сохранить">Сохранить</button>
         </form>
       </div>
