--- a/index.html
+++ b/index.html
@@ -108,12 +108,10 @@
     </section>
 
   </div>
-  <script src="./scripts/index.js"></script>
-
-<!--* templates -->
-
+  <!--* templates -->
   <template class="element_template">
     <li class="element">
+      <button class="button element__delete-button" aria-label="Удалить" type="button"></button>
       <img class="element__image" src="#" alt="Фото места">
       <div class="element__info">
         <h2 class="element__title"></h2>
@@ -121,7 +119,7 @@
       </div>
     </li>
   </template>
-
+  <script src="./scripts/index.js"></script>
 </body>
 
 </html>
