--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
         <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
       </footer>
     </div>
-<!--* pop-up -->
+<!--* pop-up's -->
+<!--* edit-profile -->
     <section class="popup">
       <div class="popup__container">
         <h2 class="popup__title">Редактировать профиль</h2>
@@ -95,6 +96,7 @@
         </form>
       </div>
     </section>
+<!--* add place -->
     <section class="popup-place">
       <div class="popup-place__container">
         <h2 class="popup-place__title">Новое место</h2>
@@ -106,7 +108,14 @@
         </form>
       </div>
     </section>
-
+<!--* image -->
+    <section class="popup-image">
+      <div class="popup-image__container">
+        <button class="button popup-image__exit-button" type="button" aria-label="Закрыть"></button>
+        <img class="popup-image__image" src="https://images.unsplash.com/photo-1611342749062-b24a41652f6a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80" alt="Фото места">
+        <h2 class="popup-image__title">New place</h2>
+      </div>
+    </section>
   </div>
   <!--* templates -->
   <template class="element_template">
