index.html fixed

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -41,40 +40,40 @@
     </div>
 <!--* pop-up's -->
 <!--* edit-profile -->
-    <section class="popup" id="edit-profile">
-      <div class="popup__container">
+    <section class="popup popup_type_input" id="edit-profile">
+      <div class="popup__container popup__container_type_input">
         <h2 class="popup__title">Редактировать профиль</h2>
         <button class="button popup__exit-button" type="button" aria-label="Закрыть"></button>
         <form class="popup__form" action='#' name="profile-edit-form">
-          <input class="popup__input" type="text" placeholder="Имя" name="name">
-          <input class="popup__input" type="text" placeholder="Род занятий" name="occupation">
+          <input class="popup__input" type="text" placeholder="Имя" name="name" required>
+          <input class="popup__input" type="text" placeholder="Род занятий" name="occupation" required>
           <button class="button popup__save-button" type="submit" aria-label="Сохранить">Сохранить</button>
         </form>
       </div>
     </section>
 <!--* add place -->
-    <section class="popup" id="add-place">
-      <div class="popup__container">
+    <section class="popup popup_type_input" id="add-place">
+      <div class="popup__container popup__container_type_input">
         <h2 class="popup__title">Новое место</h2>
         <button class="button popup__exit-button" type="button" aria-label="Закрыть"></button>
-        <form class="popup__form" action='#' name="profile-edit-form">
-          <input class="popup__input" type="text" placeholder="Название" name="place">
-          <input class="popup__input" type="text" placeholder="Ссылка на картинку" name="link">
+        <form class="popup__form" action='#' name="add-element-form">
+          <input class="popup__input" type="text" placeholder="Название" name="place" required>
+          <input class="popup__input" type="url" placeholder="Ссылка на картинку" name="link" required>
           <button class="button popup__save-button" type="submit" aria-label="Сохранить">Сохранить</button>
         </form>
       </div>
     </section>
 <!--* image -->
-    <section class="popup-image" id="image-popup">
-      <div class="popup-image__container">
-        <button class="button popup-image__exit-button" type="button" aria-label="Закрыть"></button>
-        <img class="popup-image__image" src="#" alt="Фото места">
-        <h2 class="popup-image__title"></h2>
+    <section class="popup popup_type_image" id="image-popup">
+      <div class="popup__container popup__container_type_image">
+        <button class="button popup__exit-button" type="button" aria-label="Закрыть"></button>
+        <img class="popup__image" src="#" alt="Фото места">
+        <h2 class="popup__caption"></h2>
       </div>
     </section>
   </div>
 <!--* templates -->
-  <template class="element_template">
+  <template class="element-template">
     <li class="element">
       <button class="button element__delete-button" aria-label="Удалить" type="button"></button>
       <img class="element__image" src="#" alt="Фото места">
