--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
       </div>
     </li>
   </template>
+  <script src="./scripts/initial-сards.js"></script>
   <script src="./scripts/index.js"></script>
 </body>
 </html>
