--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
         <h2 class="popup__title">Редактировать профиль</h2>
         <button class="button popup__exit-button" type="button" aria-label="Закрыть"></button>
         <form class="popup__form" action='#' name="profile-edit-form">
-          <input class="popup__input" type="text" placeholder="Имя" name="name" required>
-          <input class="popup__input" type="text" placeholder="Род занятий" name="occupation" required>
+          <input class="popup__input" type="text" placeholder="Имя" name="name" required minlength="2" maxlength="40">
+          <span class="popup__input-error"> </span>
+          <input class="popup__input" type="text" placeholder="Род занятий" name="occupation" required minlength="2" maxlength="200">
+          <span class="popup__input-error"> </span>
           <button class="button popup__save-button" type="submit" aria-label="Сохранить">Сохранить</button>
         </form>
       </div>
@@ -57,8 +59,10 @@
         <h2 class="popup__title">Новое место</h2>
         <button class="button popup__exit-button" type="button" aria-label="Закрыть"></button>
         <form class="popup__form" action='#' name="add-element-form">
-          <input class="popup__input" type="text" placeholder="Название" name="place" required>
+          <input class="popup__input" type="text" placeholder="Название" name="place" required minlength="2" maxlength="30">
+          <span class="popup__input-error"> </span>
           <input class="popup__input" type="url" placeholder="Ссылка на картинку" name="link" required>
+          <span class="popup__input-error"> </span>
           <button class="button popup__save-button" type="submit" aria-label="Сохранить">Сохранить</button>
         </form>
       </div>
