white line fixed

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <link rel="stylesheet" href="./pages/index.css">
   <title>Место</title>
 </head>
-<body>
-  <div class="root">
+<body class="root">
     <div class="page">
 <!--* header -->
       <header class="header section">
@@ -75,7 +74,6 @@
         <h2 class="popup__caption"></h2>
       </div>
     </section>
-  </div>
 <!--* templates -->
   <template class="element-template">
     <li class="element">
