--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
     </li>
   </template>
   <script src="./scripts/initial-сards.js"></script>
+  <script src="./scripts/card.js"></script>
   <script src="./scripts/index.js"></script>
   <script src="./scripts/validate.js"></script>
 </body>
