--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
       </div>
     </li>
   </template>
-  <script src="./scripts/initial-сards.js"></script>
-  <script src="./scripts/card.js"></script>
-  <script src="./scripts/index.js"></script>
-  <script src="./scripts/validate.js"></script>
+  <script type="module" src="./scripts/initial-сards.js"></script>
+  <script type="module" src="./scripts/Card.js"></script>
+  <script type="module" src="./scripts/FormValidator.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
