--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
         <input class="popup__input" id="name" type="text" placeholder="Имя" name="name" required minlength="2"
           maxlength="40">
         <span class="popup__input-error" id="name-error">Mistake</span>
-        <input class="popup__input" id="occupation" type="text" placeholder="Род занятий" name="occupation" required
+        <input class="popup__input" id="occupation" type="text" placeholder="Род занятий" name="about" required
           minlength="2" maxlength="200">
         <span class="popup__input-error" id="occupation-error"></span>
         <button class="button popup__save-button" type="submit" aria-label="Сохранить">Сохранить</button>
@@ -61,7 +61,7 @@
       <h2 class="popup__title">Новое место</h2>
       <button class="button popup__exit-button" type="button" aria-label="Закрыть"></button>
       <form class="popup__form" action='#' name="add-element-form" novalidate>
-        <input class="popup__input" id="title" type="text" placeholder="Название" name="place" required minlength="2"
+        <input class="popup__input" id="title" type="text" placeholder="Название" name="name" required minlength="2"
           maxlength="30">
         <span class="popup__input-error" id="title-error">Mistake</span>
         <input class="popup__input" id="link" type="url" placeholder="Ссылка на картинку" name="link" required>
