--- a/src/index.html
+++ b/src/index.html
@@ -19,11 +19,11 @@
     <main class="main">
       <!--* profile -->
       <section class="profile section">
-        <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="Фото профиля">
+        <div class="profile__avatar"></div>
         <div class="profile__info">
-          <h1 class="profile__name">Билл Мюррей</h1>
+          <h1 class="profile__name"></h1>
           <button class="button profile__edit-button" aria-label="Изменить профиль" type="button"></button>
-          <p class="profile__occupation">Актёр</p>
+          <p class="profile__occupation"></p>
         </div>
         <button class="button profile__add-button" aria-label="Добавить" type="button"></button>
       </section>
@@ -39,6 +39,18 @@
     </footer>
   </div>
   <!--* pop-up's -->
+  <!--* edit-avatar -->
+  <section class="popup popup_type_input" id="edit-avatar">
+    <div class="popup__container popup__container_type_input">
+      <h2 class="popup__title">Обновить аватар</h2>
+      <button class="button popup__exit-button" type="button" aria-label="Закрыть"></button>
+      <form class="popup__form" action='#' name="profile-edit-form" novalidate>
+        <input class="popup__input" id="avatar" type="url" placeholder="Ссылка на картинку" name="avatar" required>
+        <span class="popup__input-error" id="avatar-error"></span>
+        <button class="button popup__save-button" type="submit" aria-label="Сохранить">Сохранить</button>
+      </form>
+    </div>
+  </section>
   <!--* edit-profile -->
   <section class="popup popup_type_input" id="edit-profile">
     <div class="popup__container popup__container_type_input">
