--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
       <h2 class="popup__title">Вы уверены?</h2>
       <button class="button popup__exit-button" type="button" aria-label="Закрыть"></button>
       <form class="popup__form" action='#' name="delete-conformation-form" novalidate>
-        <button class="button popup__save-button" type="submit" aria-label="Сохранить">Да</button>
+        <button class="button popup__save-button" type="submit" aria-label="Да">Да</button>
       </form>
     </div>
   </section>
